--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   -->
   <link rel="preload" as="image" href="./assets/images/loading.svg">
   <link rel="preload" as="image" href="./assets/images/loading-circle.svg">
-  <link rel="preload" as="image" href="./assets/images/hero-banner.png">
+  <link rel="preload" as="image" href="./assets2/img/background/img-14.jpg">
 
 </head>
 
