--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   -->
   <link rel="preload" as="image" href="./assets/images/loading.svg">
   <link rel="preload" as="image" href="./assets/images/loading-circle.svg">
-  <link rel="preload" as="image" href="./assets2/img/background/img-14.jpg">
+  <link rel="preload" as="image" href="./assets2/img/background/img-1.png">
 
 </head>
 
@@ -131,53 +131,15 @@
           <div class="hero-content" data-reveal="left">
 
             <h1 class="h1 hero-title">
-              Book Your <span class="span">New Eco-Friendly</span> Ride.
+              Ekiplerimiz <span class="span">çok çeşitli ev tadilat ve bakım</span> görevlerini üstlenebilir.
             </h1>
 
-            <ul class="hero-list">
 
-              <li>
-                <div class="hero-card">
-                  <ion-icon name="speedometer-outline" aria-hidden="true"></ion-icon>
-
-                  <p class="card-subtitle">Top speed</p>
-
-                  <p class="card-title">80 km/h</p>
-                </div>
-              </li>
-
-              <li>
-                <div class="hero-card">
-                  <ion-icon name="stopwatch-outline" aria-hidden="true"></ion-icon>
-
-                  <p class="card-subtitle">0-40 km/hr in</p>
-
-                  <p class="card-title">3.3 sec</p>
-                </div>
-              </li>
-
-              <li>
-                <div class="hero-card">
-                  <ion-icon name="speedometer-outline" aria-hidden="true"></ion-icon>
-
-                  <p class="card-subtitle">Certified Range</p>
-
-                  <p class="card-title">116 km</p>
-                </div>
-              </li>
-
-            </ul>
-
-            <a href="#" class="btn btn-primary">
-              <span class="span">Book Now</span>
-
-              <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-            </a>
-
+  
           </div>
 
           <figure class="hero-banner" data-reveal="right">
-            <img src="./assets/images/hero-banner.png" width="1116" height="766" alt="Bike" class="w-100">
+            <img src="./assets2/img/background/img-1.png" width="400" height="300" alt="Bike" class="w-100">
           </figure>
 
         </div>
