--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
         <div class="container">
 
           <figure class="about-banner" data-reveal="left">
-            <img src="./assets/images/about-banner-1.jpg" width="380" height="382" loading="lazy" alt="about banner"
+            <img src="./assets3/2.PNG" width="380" height="382" loading="lazy" alt="about banner"
               class="w-100 img-1">
 
-            <img src="./assets/images/about-banner-2.jpg" width="347" height="349" loading="lazy" alt="about banner"
+            <img src="./assets3/3.PNG" width="347" height="349" loading="lazy" alt="about banner"
               class="w-100 img-2">
           </figure>
 
@@ -276,7 +276,7 @@
           </ul>
 
           <div class="stats-banner" data-reveal>
-            <img src="./assets/images/stats-banner.jpg" width="1398" height="565" loading="lazy" alt="video banner"
+            <img src="./assets3/5.PNG" width="1398" height="565" loading="lazy" alt="video banner"
               class="img-cover">
 
             <button class="play-btn" aria-label="play video">
@@ -353,7 +353,7 @@
             </ul>
 
             <figure class="service-banner img-holder" style="--width: 805; --height: 510;">
-              <img src="./assets/images/service-banner.png" width="805" height="510" loading="lazy" alt="service banner"
+              <img src="./assets3/6.PNG" width="805" height="510" loading="lazy" alt="service banner"
                 class="img-cover">
             </figure>
 
