--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   -->
   <link rel="preload" as="image" href="./assets/images/loading.svg">
   <link rel="preload" as="image" href="./assets/images/loading-circle.svg">
-  <link rel="preload" as="image" href="./assets2/img/background/img-1.png">
+  <link rel="preload" as="image" href="./assets3/333.png">
 
 </head>
 
@@ -61,50 +61,18 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.svg" width="160" height="50" alt="volti home">
+        <img src="./assets3/gf-1.gif" width="160" height="50" alt="volti home">
       </a>
 
       <nav class="navbar" data-navbar>
-        <ul class="navbar-list">
-
-          <li class="navbar-item">
-            <a href="#" class="navbar-link">Home</a>
-          </li>
-
-          <li class="navbar-item">
-            <a href="#" class="navbar-link">Services</a>
-          </li>
-
-          <li class="navbar-item">
-            <a href="#" class="navbar-link">Gallery</a>
-          </li>
-
-          <li class="navbar-item">
-            <a href="#" class="navbar-link">Blog</a>
-          </li>
-
-          <li class="navbar-item">
-            <a href="#" class="navbar-link">Contact Us</a>
-          </li>
-
-        </ul>
-      </nav>
-
-      <div class="header-action">
-
         <a href="tel:+12312345678901" class="contact-number">
           <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
 
           <span class="span">+(123) 1234-567-8901</span>
         </a>
+      </nav>
 
-        <a href="#" class="btn btn-primary">
-          <span class="span">Get a quote</span>
-
-          <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-        </a>
-
-      </div>
+ 
 
       <button class="nav-toggle-btn" aria-label="toggle menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true" class="open"></ion-icon>
@@ -139,7 +107,7 @@
           </div>
 
           <figure class="hero-banner" data-reveal="right">
-            <img src="./assets2/img/background/img-1.png" width="400" height="300" alt="Bike" class="w-100">
+            <img src="./assets3/333.png" width="400" height="300" alt="Bike" class="w-100">
           </figure>
 
         </div>
