--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   -->
   <link rel="preload" as="image" href="./assets/images/loading.svg">
   <link rel="preload" as="image" href="./assets/images/loading-circle.svg">
-  <link rel="preload" as="image" href="./assets3/333.png">
+  <link rel="preload" as="image" href="./assets3/5.jpg">
 
 </head>
 
@@ -61,14 +61,15 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets3/gf-1.gif" width="160" height="50" alt="volti home">
+        <img src="./assets3/26.PNG" width="100" height="100" alt="volti home">
       </a>
+      <span >asdasd</span>
 
       <nav class="navbar" data-navbar>
         <a href="tel:+12312345678901" class="contact-number">
           <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
 
-          <span class="span">+(123) 1234-567-8901</span>
+          <span class="span">0 500 111 22 33 </span>
         </a>
       </nav>
 
@@ -93,25 +94,7 @@
         - #HERO
       -->
 
-      <section class="section hero" aria-label="home">
-        <div class="container">
 
-          <div class="hero-content" data-reveal="left">
-
-            <h1 class="h1 hero-title">
-              Ekiplerimiz <span class="span">çok çeşitli ev tadilat ve bakım</span> görevlerini üstlenebilir.
-            </h1>
-
-
-  
-          </div>
-
-          <figure class="hero-banner" data-reveal="right">
-            <img src="./assets3/333.png" width="400" height="300" alt="Bike" class="w-100">
-          </figure>
-
-        </div>
-      </section>
 
 
 
@@ -125,10 +108,10 @@
         <div class="container">
 
           <figure class="about-banner" data-reveal="left">
-            <img src="./assets3/2.PNG" width="380" height="382" loading="lazy" alt="about banner"
+            <img src="./assets3/16.jpg" width="380" height="382" loading="lazy" alt="about banner"
               class="w-100 img-1">
 
-            <img src="./assets3/3.PNG" width="347" height="349" loading="lazy" alt="about banner"
+            <img src="./assets3/21.jpg" width="347" height="349" loading="lazy" alt="about banner"
               class="w-100 img-2">
           </figure>
 
@@ -215,174 +198,11 @@
       <section class="section stats" aria-label="statistics">
         <div class="container">
 
-          <ul class="stats-list" data-reveal>
 
-            <li class="stats-card">
-              <h3 class="h3 card-title">650m</h3>
-
-              <p class="card-text">
-                Check charge status remotely through Ether app
-              </p>
-            </li>
-
-            <li class="stats-card">
-              <h3 class="h3 card-title">564+</h3>
-
-              <p class="card-text">
-                Check charge status remotely through Ether app
-              </p>
-            </li>
-
-            <li class="stats-card">
-              <h3 class="h3 card-title">125k</h3>
-
-              <p class="card-text">
-                Check charge status remotely through Ether app
-              </p>
-            </li>
-
-          </ul>
-
-          <div class="stats-banner" data-reveal>
-            <img src="./assets3/5.PNG" width="1398" height="565" loading="lazy" alt="video banner"
-              class="img-cover">
-
-            <button class="play-btn" aria-label="play video">
-              <ion-icon name="play" aria-hidden="true"></ion-icon>
-            </button>
-          </div>
 
         </div>
       </section>
 
-
-
-
-
-      <!-- 
-        - #SERVICE
-      -->
-
-      <section class="section service" aria-labelledby="service-label">
-        <div class="container">
-
-          <p class="section-subtitle has-before" id="service-label" data-reveal>What We Do!</p>
-
-          <h2 class="h2 section-title" data-reveal>
-            What Advantages Will You Get Using An Escooter?
-          </h2>
-
-          <div class="wrapper">
-
-            <ul class="service-list" data-reveal="left">
-
-              <li class="service-item">
-                <div>
-                  <h3 class="h5 card-title">Recoverable Energy</h3>
-
-                  <p class="card-text">
-                    Charge Your Electric Vehicle At Home Using One Of Our Smart.
-                  </p>
-                </div>
-
-                <div class="card-icon">
-                  <ion-icon name="car-outline" aria-hidden="true"></ion-icon>
-                </div>
-              </li>
-
-              <li class="service-item">
-                <div>
-                  <h3 class="h5 card-title">Quick Installation</h3>
-
-                  <p class="card-text">
-                    Charge Your Electric Vehicle At Home Using One Of Our Smart.
-                  </p>
-                </div>
-
-                <div class="card-icon">
-                  <ion-icon name="compass-outline" aria-hidden="true"></ion-icon>
-                </div>
-              </li>
-
-              <li class="service-item">
-                <div>
-                  <h3 class="h5 card-title">Zero Contact Travel</h3>
-
-                  <p class="card-text">
-                    Charge Your Electric Vehicle At Home Using One Of Our Smart.
-                  </p>
-                </div>
-
-                <div class="card-icon">
-                  <ion-icon name="bonfire-outline" aria-hidden="true"></ion-icon>
-                </div>
-              </li>
-
-            </ul>
-
-            <figure class="service-banner img-holder" style="--width: 805; --height: 510;">
-              <img src="./assets3/6.PNG" width="805" height="510" loading="lazy" alt="service banner"
-                class="img-cover">
-            </figure>
-
-            <ul class="service-list" data-reveal="right">
-
-              <li class="service-item">
-                <div class="card-icon">
-                  <ion-icon name="car-outline" aria-hidden="true"></ion-icon>
-                </div>
-
-                <div>
-                  <h3 class="h5 card-title">Recoverable Energy</h3>
-
-                  <p class="card-text">
-                    Charge Your Electric Vehicle At Home Using One Of Our Smart.
-                  </p>
-                </div>
-              </li>
-
-              <li class="service-item">
-                <div class="card-icon">
-                  <ion-icon name="compass-outline" aria-hidden="true"></ion-icon>
-                </div>
-
-                <div>
-                  <h3 class="h5 card-title">Quick Installation</h3>
-
-                  <p class="card-text">
-                    Charge Your Electric Vehicle At Home Using One Of Our Smart.
-                  </p>
-                </div>
-              </li>
-
-              <li class="service-item">
-                <div class="card-icon">
-                  <ion-icon name="bonfire-outline" aria-hidden="true"></ion-icon>
-                </div>
-
-                <div>
-                  <h3 class="h5 card-title">Zero Contact Travel</h3>
-
-                  <p class="card-text">
-                    Charge Your Electric Vehicle At Home Using One Of Our Smart.
-                  </p>
-                </div>
-              </li>
-
-            </ul>
-
-          </div>
-
-        </div>
-      </section>
-
-
-
-
-
-      <!-- 
-        - #CTA
-      -->
 
       <section class="cta">
         <div class="container">
@@ -406,7 +226,7 @@
           </div>
 
           <figure class="cta-banner" data-reveal="right">
-            <img src="./assets/images/cta-banner.jpg" width="330" height="206" loading="lazy" alt="cta banner"
+            <img src="./assets3/40.jpg" width="330" height="206" loading="lazy" alt="cta banner"
               class="img-cover">
           </figure>
 
@@ -446,7 +266,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 770; --height: 550;">
-                  <img src="./assets/images/blog-1.jpg" width="770" height="550" loading="lazy"
+                  <img src="./assets3/37.png" width="300" height="550" loading="lazy"
                     alt="Energy Star Certified Electric Vehicle Chargers" class="img-cover">
                 </figure>
 
@@ -485,7 +305,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 770; --height: 550;">
-                  <img src="./assets/images/blog-2.jpg" width="770" height="550" loading="lazy"
+                  <img src="./assets3/39.jpg" width="770" height="550" loading="lazy"
                     alt="Charging Solution For Electric Car & Hybrid Car" class="img-cover">
                 </figure>
 
@@ -524,7 +344,7 @@
               <div class="blog-card">
 
                 <figure class="card-banner img-holder" style="--width: 770; --height: 550;">
-                  <img src="./assets/images/blog-3.jpg" width="770" height="550" loading="lazy"
+                  <img src="./assets3/14.jpg" width="770" height="550" loading="lazy"
                     alt="Home Charging Station For A Electric Vehicless" class="img-cover">
                 </figure>
 
@@ -638,156 +458,8 @@
   <footer class="footer">
     <div class="container">
 
-      <div class="footer-top section" data-reveal>
 
-        <div class="newsletter-card">
 
-          <div class="card-icon">
-            <ion-icon name="mail-unread-outline" aria-hidden="true"></ion-icon>
-          </div>
-
-          <h3 class="h3 card-title">Sign up for Electric Car,news & inslights</h3>
-
-          <form action="#" class="newsletter-form">
-
-            <label for="email" class="label">Email address</label>
-
-            <input type="emal" name="email" id="email" placeholder="Email address" required class="email-field">
-
-            <button type="submit" class="btn btn-primary">Subscribe</button>
-
-          </form>
-
-        </div>
-
-        <div class="footer-list">
-
-          <p class="h6 has-after">Volti WP Theme</p>
-
-          <p class="footer-text">
-            A leading developer of A-grade commercial, electric car and bike projects in USA. Since its foundation the
-            company has doubled its turnover year on year, with its staff numbers.
-          </p>
-
-          <a href="#" class="btn-outline">
-            <span class="span">Get a quote</span>
-
-            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-          </a>
-
-        </div>
-
-        <ul class="footer-list">
-
-          <li>
-            <p class="h6 has-after">Company Info</p>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">About Us</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Our Projects</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Meet Our Team</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">News & Media</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Contact Us</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-link">Careers</a>
-          </li>
-
-        </ul>
-
-        <ul class="footer-list">
-
-          <li>
-            <p class="h6 has-after">Quick Contact</p>
-          </li>
-
-          <li>
-            <address class="footer-text">
-              2307 Beverley Rd Brooklyn, New York 11226 United States.
-            </address>
-          </li>
-
-          <li>
-            <p class="footer-text">
-              If you have any questions or need help, feel free to contact with our team.
-            </p>
-          </li>
-
-          <li>
-            <a href="tel:00201061245741" class="contact-link">(002) 01061245741</a>
-          </li>
-
-        </ul>
-
-      </div>
-
-      <div class="footer-bottom">
-
-        <div>
-          <ul class="footer-bottom-list">
-
-            <li>
-              <a href="#" class="footer-bottom-link">Where to Find Us</a>
-            </li>
-
-            <li>
-              <a href="#" class="footer-bottom-link">Terms of Payment</a>
-            </li>
-
-            <li>
-              <a href="#" class="footer-bottom-link">Stats Element</a>
-            </li>
-
-          </ul>
-
-          <p class="copyright">Made with love @codewithsadee</p>
-        </div>
-
-        <img src="./assets/images/footer-logo.svg" width="100" height="63" loading="lazy" alt="Volti home">
-
-        <ul class="social-list">
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook" aria-hidden="true"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter" aria-hidden="true"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-youtube" aria-hidden="true"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-linkedin" aria-hidden="true"></ion-icon>
-            </a>
-          </li>
-
-        </ul>
-
-      </div>
 
     </div>
   </footer>
