--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
 
       <a href="#" class="logo">
         <img src="./assets3/26.PNG" width="100" height="100" alt="volti home">
+    
       </a>
-      <span >asdasd</span>
+      <nav class="navbar" data-navbar>
+        <a  class="contact-number">
 
+          <span class="span">Tamir Tadilat </span>
+        </a>
+      </nav>
       <nav class="navbar" data-navbar>
         <a href="tel:+12312345678901" class="contact-number">
           <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
