--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
             <p class="section-subtitle has-before" id="about-label">What We Do!</p>
 
             <h2 class="h2 section-title">
-              Our mission is to put an electric vehicle charge
+              Ev sahiplerinin
             </h2>
 
             <p class="section-text">
-              Charge your electric vehicle at home using one of our smart home char ge solutions or gain access to over
-              3,000 public charging.
+              
+              akan bir musluğu tamir etmek, banyo armatürlerini takmak veya değiştirmek, çöp öğütücüsünü değiştirmek veya lavaboyu açmak, yeni bir duş başlığı takmak veya mutfak ve banyoları çıkarmak ve yeniden macunlamak için tesisatçıya ihtiyacı olmayabilir. Hangi tesisat hizmetlerinin lisanslı bir tesisatçı gerektirdiğine ve tesisat kurulumu ve onarımı için yerel bina kodlarınızın ne olduğuna dikkat edin.
             </p>
 
             <div class="about-wrapper">
