--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <p class="section-text">
               
-              akan bir musluğu tamir etmek, banyo armatürlerini takmak veya değiştirmek, çöp öğütücüsünü değiştirmek veya lavaboyu açmak, yeni bir duş başlığı takmak veya mutfak ve banyoları çıkarmak ve yeniden macunlamak için tesisatçıya ihtiyacı olmayabilir. Hangi tesisat hizmetlerinin lisanslı bir tesisatçı gerektirdiğine ve tesisat kurulumu ve onarımı için yerel bina kodlarınızın ne olduğuna dikkat edin.
+              akan bir musluğu tamir etmek, banyo armatürlerini takmak veya değiştirmek,  lavaboyu açmak, yeni bir duş başlığı takmak veya mutfak ve banyoları çıkarmak ve yeniden macunlamak için tesisatçıya ihtiyacı olmayabilir. Hangi tesisat hizmetlerinin lisanslı bir tesisatçı gerektirdiğine ve tesisat kurulumu ve onarımı için yerel bina kodlarınızın ne olduğuna dikkat edin.
             </p>
 
             <div class="about-wrapper">
