--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
+      <a  class="logo">
         <img src="./assets3/26.PNG" width="100" height="100" alt="volti home">
     
       </a>
