--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
 
       <a  class="logo">
-        <img src="./assets3/26.PNG" width="100" height="100" alt="volti home">
+        <img src="./assets3/26.PNG" width="100" height="100" >
     
       </a>
     
