--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
                 <div class="card-content">
 
-                  <time class="publish-date" >Mekanik Elektrik Tesisat</time>
+                  <time class="publish-date" >Elektrik Tesisat ve Cihazlar</time>
 
                   <ul class="card-meta-list">
 
@@ -241,7 +241,7 @@
 
                   <h3 class="h5">
                     <a href="#" class="card-title">
-                      Mekanik Elektrik Tesisat
+                      Tamir ve Bakımı
                     </a>
                   </h3>
 
