--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
 
       <a  class="logo">
-        <img src="./assets3/26.PNG" width="100" height="100" >
+        <img src="./assets3/266.PNG" width="100" height="100" >
     
       </a>
     
@@ -116,6 +116,9 @@
 
       <section class="section blog" aria-labelledby="blog-label">
         <div class="container">
+          <div>.</div>
+          <div>.</div>
+          <div>.</div>
 
           <div class="title-wrapper" data-reveal>
 
