--- a/index.html
+++ b/index.html
@@ -276,6 +276,10 @@
         <div class="container">
 
           <ul class="contact-list">
+            <li>
+
+                <a aria-label="Chat on WhatsApp" href="https://wa.me/05551112233"><img alt="Chat on WhatsApp" src="https://scontent.whatsapp.net/v/t39.8562-34/420077459_703742575180618_3955965302853713788_n.png?ccb=1-7&_nc_sid=73b08c&_nc_ohc=zwfWuxv95q0Q7kNvgEy3Mb_&_nc_ht=scontent.whatsapp.net&_nc_gid=Aa5Qw6d-3uUn32HMCodseie&oh=01_Q5AaIO4e9L9p6byUlrUbHneU-7kfLnS8r3nsOLztOavbO8ZM&oe=66F0B0E8" ></a>
+            </li>
 
             <li>
               <div class="contact-card">
