--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@
 
           <ul class="contact-list">
             <li>
-
-                <a aria-label="Chat on WhatsApp" href="https://wa.me/05551112233"><img alt="Chat on WhatsApp" src="https://scontent.whatsapp.net/v/t39.8562-34/420077459_703742575180618_3955965302853713788_n.png?ccb=1-7&_nc_sid=73b08c&_nc_ohc=zwfWuxv95q0Q7kNvgEy3Mb_&_nc_ht=scontent.whatsapp.net&_nc_gid=Aa5Qw6d-3uUn32HMCodseie&oh=01_Q5AaIO4e9L9p6byUlrUbHneU-7kfLnS8r3nsOLztOavbO8ZM&oe=66F0B0E8" ></a>
+                <a aria-label="Chat on WhatsApp" href="https://wa.me/05551112233"><img  style="width:auto;" alt="Chat on WhatsApp" src="https://scontent.whatsapp.net/v/t39.8562-34/420077459_703742575180618_3955965302853713788_n.png?ccb=1-7&_nc_sid=73b08c&_nc_ohc=zwfWuxv95q0Q7kNvgEy3Mb_&_nc_ht=scontent.whatsapp.net&_nc_gid=Aa5Qw6d-3uUn32HMCodseie&oh=01_Q5AaIO4e9L9p6byUlrUbHneU-7kfLnS8r3nsOLztOavbO8ZM&oe=66F0B0E8" ></a>
             </li>
 
             <li>
@@ -288,9 +287,9 @@
                 </div>
 
                 <div>
-                  <h3 class="h6">Hot Line</h3>
+                  <h3 class="h6">Tel :</h3>
 
-                  <a href="tel:+01123457890" class="card-subtitle">+(01) 1234-57-890</a>
+                  <a href="tel:0 555 111 22 33" class="card-subtitle">0 555 111 22 33</a>
                 </div>
               </div>
             </li>
@@ -302,26 +301,13 @@
                 </div>
 
                 <div>
-                  <h3 class="h6">E-mail Address</h3>
+                  <h3 class="h6">E-mail Addresimiz</h3>
 
-                  <a href="mailto:voltiinfo@gmail.com" class="card-subtitle">voltiinfo@gmail.com</a>
+                  <a href="mailto:cayyolutadilat@gmail.com" class="card-subtitle">cayyolutadilat@gmail.com</a>
                 </div>
               </div>
             </li>
 
-            <li>
-              <div class="contact-card">
-                <div class="card-icon">
-                  <ion-icon name="compass-outline" aria-hidden="true"></ion-icon>
-                </div>
-
-                <div>
-                  <h3 class="h6">Our Location</h3>
-
-                  <address class="card-subtitle">101 Avenue, S.E. USA</address>
-                </div>
-              </div>
-            </li>
 
           </ul>
 
