--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     - primary meta tags
   -->
   <title>Volti - Book Your Eco-Friendly Ride</title>
-  <meta name="title" content="Volti - Book Your Eco-Friendly Ride">
-  <meta name="description" content="This is a vahicle charging html template made by codewithsadee">
+  <meta name="title" content="Çayyolu Tamir Tadilat">
+  <meta name="description" content="bakım onarım işleri">
 
   <!-- 
     - favicon
