--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Volti - Book Your Eco-Friendly Ride</title>
+  <title>Çayyolu Tamir Tadilat</title>
   <meta name="title" content="Çayyolu Tamir Tadilat">
   <meta name="description" content="bakım onarım işleri">
 
