--- a/index.html
+++ b/index.html
@@ -274,12 +274,13 @@
 
       <section class="contact" aria-label="contact" data-reveal="right">
         <div class="container">
-
+          <a aria-label="İnstagram" href="https://www.instagram.com/cayyolutadilat/"><img  style="width:auto;height:50px;"  src="/assets3/inst.png" ></a>
           <ul class="contact-list">
             <li>
                 <a aria-label="Chat on WhatsApp" href="https://wa.me/05551112233"><img  style="width:auto;" alt="Chat on WhatsApp" src="https://scontent.whatsapp.net/v/t39.8562-34/420077459_703742575180618_3955965302853713788_n.png?ccb=1-7&_nc_sid=73b08c&_nc_ohc=zwfWuxv95q0Q7kNvgEy3Mb_&_nc_ht=scontent.whatsapp.net&_nc_gid=Aa5Qw6d-3uUn32HMCodseie&oh=01_Q5AaIO4e9L9p6byUlrUbHneU-7kfLnS8r3nsOLztOavbO8ZM&oe=66F0B0E8" ></a>
-            </li>
-
+               
+              </li>
+ 
             <li>
               <div class="contact-card">
                 <div class="card-icon">
