--- a/index.html
+++ b/index.html
@@ -253,6 +253,45 @@
 
               </div>
             </li>
+            <li>
+              <div class="blog-card">
+
+                <figure class="card-banner img-holder" style="--width: 770; --height: 550;">
+                  <img src="./assets3/48.gif" width="770" height="550" loading="lazy"
+                    alt="Charging Solution For Electric Car & Hybrid Car" class="img-cover">
+                </figure>
+
+                <div class="card-content">
+
+                  <time class="publish-date" >Elektrik Tesisat ve Cihazlar</time>
+
+                  <ul class="card-meta-list">
+
+                    <li class="card-meta-item">
+                      <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
+
+                      <span class="span">Admin</span>
+                    </li>
+
+                    <li class="card-meta-item">
+                      <ion-icon name="chatbubble-outline" aria-hidden="true"></ion-icon>
+
+                      <span class="span">2 Comments</span>
+                    </li>
+
+                  </ul>
+
+                  <h3 class="h5">
+                    <a href="#" class="card-title">
+                      Tamir ve Bakımı
+                    </a>
+                  </h3>
+
+                </div>
+                
+
+              </div>
+            </li>
 
 
  
@@ -272,31 +311,33 @@
         - #CONTACT
       -->
 
-      <section class="contact" aria-label="contact" data-reveal="right">
-        <div class="container">
-          <a aria-label="İnstagram" href="https://www.instagram.com/cayyolutadilat/"><img  style="width:auto;height:50px;"  src="/assets3/inst.png" ></a>
-          <ul class="contact-list">
+      <section class="contact" aria-label="contact" data-reveal="left"  >
+        <div class="container"  >
+
+          <ul class="contact-list" >
+
             <li>
+              <div class="contact-card" >
                 <a aria-label="Chat on WhatsApp" href="https://wa.me/05551112233"><img  style="width:auto;" alt="Chat on WhatsApp" src="https://scontent.whatsapp.net/v/t39.8562-34/420077459_703742575180618_3955965302853713788_n.png?ccb=1-7&_nc_sid=73b08c&_nc_ohc=zwfWuxv95q0Q7kNvgEy3Mb_&_nc_ht=scontent.whatsapp.net&_nc_gid=Aa5Qw6d-3uUn32HMCodseie&oh=01_Q5AaIO4e9L9p6byUlrUbHneU-7kfLnS8r3nsOLztOavbO8ZM&oe=66F0B0E8" ></a>
-               
+              </div>
               </li>
  
             <li>
-              <div class="contact-card">
+              <div class="contact-card" >
                 <div class="card-icon">
                   <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
                 </div>
 
                 <div>
-                  <h3 class="h6">Tel :</h3>
+                  <h3 class="h6">Tel            :</h3>
 
-                  <a href="tel:0 555 111 22 33" class="card-subtitle">0 555 111 22 33</a>
+                  <a href="tel:0 555 111 22 33" class="card-subtitle">05551112233</a>
                 </div>
               </div>
             </li>
 
             <li>
-              <div class="contact-card">
+              <div class="contact-card" >
                 <div class="card-icon">
                   <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
                 </div>
