--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Çayyolu Tamir Tadilat</title>
-  <meta name="title" content="Çayyolu Tamir Tadilat">
-  <meta name="description" content="bakım onarım işleri">
+  <title>Çayyolu Tamir Tadilat Bakım Onarım İşleri</title>
+  <meta name="title" content="Ankara Çayyolu Tamir Tadilat Bakım Onarım İşleri">
+  <meta name="description" content="Ankara Çayyolu Tamir Tadilat Bakım Onarım İşleri">
 
   <!-- 
     - favicon
@@ -166,10 +166,14 @@
 
                   <h3 class="h5">
                     <a href="#" class="card-title">
-                         hızlı ve güvenilir çözümler üretmekteyiz.
+                         Çayyolu Mutfak Banyo Tamir Tadilat 
                     </a>
                   </h3>
-
+                  <dialog>
+                    <button autofocus>Close</button>
+                    <p>Eskimiş ve dayanma gücü kalmamış mutfaktaki eşyalarınız, haliyle zamanı geldiğinde tadilat ve tamirat gerekmektedir  Mutfak tadilatı yapılırken eğer ki daireniz eski bina ise muhtemelen mutfağın su tesisatı demir borulardır, Demir borular uzun yıllar kullanıldığında çürüme yapmaktadır. Mutfak tadilatı yaptığımız eski binalar da kesinlikle masrafına bakılmadan eski demir borular değişim yapılmalıdır. Pis su giderleri zemin ve duvarlar kırılarak kontrol edilip değişmesi gerekenler kesinlikle değişmelidir.</p>
+                  </dialog>
+                  <button>Show the dialog</button>
                 </div>
 
               </div>
@@ -185,7 +189,7 @@
 
                 <div class="card-content">
 
-                  <time class="publish-date" >Boya ve badana işleri</time>
+                  <time class="publish-date" >Boya ve Badana</time>
 
                   <ul class="card-meta-list">
 
@@ -205,7 +209,7 @@
 
                   <h3 class="h5">
                     <a href="#" class="card-title">
-                      Boya ve badana işleri
+                      Çayyolu Boya ve Badana işleri
                     </a>
                   </h3>
 
@@ -244,7 +248,7 @@
 
                   <h3 class="h5">
                     <a href="#" class="card-title">
-                      Tamir ve Bakımı
+                      Çayyolu Kazan Dairesi Tamir ve Bakımı
                     </a>
                   </h3>
 
@@ -283,7 +287,7 @@
 
                   <h3 class="h5">
                     <a href="#" class="card-title">
-                      Tamir ve Bakımı
+                      Çayyolu Elektrik Tesisat ve Gereçler
                     </a>
                   </h3>
 
